--- a/im titen.html
+++ b/im titen.html
@@ -16,48 +16,59 @@
 <div class="song">
 
 <div class="transposition"></div>
+<p class="row">
+<p class="column">
+		אִם תִּ{Cm}תֵּן לִי חֶלְ{Bb/}קִי <br/>
+		בְּאֵי{A/}מַת מַחֲשַׁ{G/}כֶּיךָ <br/>
+		אוּ{F7}לַי יֵאוֹר לִי מְ{G7}עָט.<br/>
+		אִם תִּפְ{Cm}רֹק עַל כְּתֵ{Bb/}פַי<br/>
+		אֶת {A/}כֹּבֶד עֻ{G/}לְּךָ מֵעָ{F}לֶיךָ<br/>
+		אוּלַי יֵקַל לִי מְ{G}עָט. <br/>
 
-<p>
-אִם תִּ{Cm}תֵּן לִי חֶלְ{Bb/}קִי <br/>
-בְּאֵי{A/}מַת מַחֲשַׁ{G/}כֶּיךָ <br/>
-אוּ{F7}לַי יֵאוֹר לִי מְ{G7}עָט.<br/>
-אִם תִּפְ{Cm}רֹק עַל כְּתֵ{Bb/}פַי<br/>
-אֶת {A/}כֹּבֶד עֻ{G/}לְּךָ מֵעָ{F}לֶיךָ<br/>
-אוּלַי יֵקַל לִי מְ{G}עָט. <br/>
+		<br/>
+		<b>פזמון:</b><br/>
+		אִם תָּ{Gm}בִיא אֱלֵי {F/}כְּפוֹר עַזְבוּ{Eb}תִי אֶת צִ{Db/}נַּת
+		בְּדִידוּתֶ{D7}ךָ <br/>
+		אִם תָּ{Gm}בִיא אֱלֵי {F/}כְּפוֹר עַזְבוּ{Eb}תִי אֶת צִ{Db/}נַּת
+		בְּדִידוּתֶ{D7}ךָ <br/>
+		אוּלַי יֵחַם {Gm}לִי מְעָט. <br/>
 
-<b>פזמון:</b><br/>
-אִם תָּ{Gm}בִיא אֱלֵי {F/}כְּפוֹר עַזְבוּ{Eb}תִי אֶת צִ{Db/}נַּת
-בְּדִידוּתֶ{D7}ךָ <br/>
-אִם תָּ{Gm}בִיא אֱלֵי {F/}כְּפוֹר עַזְבוּ{Eb}תִי אֶת צִ{Db/}נַּת
-בְּדִידוּתֶ{D7}ךָ <br/>
-אוּלַי יֵחַם {Gm}לִי מְעָט. <br/>
+		<b>*** סולו גלעד ***</b>
+		<br/>
 
-<b>*** סולו גלעד ***</b>
-<br/>
+  </p>
+  <p class="column">
 
+		כְּמוֹ {Cm}עֵץ בִּשְׁלָ{Bb/}גָיו, <br/>
+		הַנּוֹ{A/}צֵר אֶת אֲ{G/}בִיב <br/>
+		נִצָּ{F}נָיו בַּ{G7}קָּרָה,<br/>
 
-כְּמוֹ {Cm}עֵץ בִּשְׁלָ{Bb/}גָיו, <br/>
-הַנּוֹ{A/}צֵר אֶת אֲ{G/}בִיב <br/>
-נִצָּ{F}נָיו בַּ{G7}קָּרָה,<br/>
+		אֶעֱ{Cm}מֹד בְּפִתְ{Bb/}חֵי <br/>
+		יְגוֹנֶ{A/}יךָ {  }{G/} <br/>
+		וְהָ{F}יָה מַכְאוֹבְךָ לִי תְּשׁוּ{G}רָה.<br/>
 
-אֶעֱ{Cm}מֹד בְּפִתְ{Bb/}חֵי <br/>
-יְגוֹנֶ{A/}יךָ {  }{G/} <br/>
-וְהָ{F}יָה מַכְאוֹבְךָ לִי תְּשׁוּ{G}רָה.<br/>
+		<br/>
+		<b>פזמון:</b><br/>
+		אִם תָּ{Gm}בִיא אֱלֵי {F/}כְּפוֹר עַזְבוּ{Eb}תִי אֶת צִ{Db/}נַּת
+		בְּדִידוּתֶ{D7}ךָ <br/>
+		אִם תָּ{Gm}בִיא אֱלֵי {F/}כְּפוֹר עַזְבוּ{Eb}תִי אֶת צִ{Db/}נַּת
+		בְּדִידוּתֶ{D7}ךָ <br/>
+		אוּלַי יֵחַם {Gm}לִי מְעָט. <br/>
+		<br/>
 
-<b>** פזמון **</b><br/>
+  	
+		אֶעֱ{Cm}מֹד בְּפִתְ{Bb/}חֵי <br/>
+		יְגוֹנֶ{A/}יךָ {  }{G/} <br/>
+		וְהָ{F}יָה מַכְאוֹבְךָ לִי תְּשׁוּ{G}רָה.<br/>
 
-אֶעֱ{Cm}מֹד בְּפִתְ{Bb/}חֵי <br/>
-יְגוֹנֶ{A/}יךָ {  }{G/} <br/>
-וְהָ{F}יָה מַכְאוֹבְךָ לִי תְּשׁוּ{G}רָה.<br/>
+		בְּיָ{Cm}דַיִם טוֹ{Bb/}בוֹת <br/>
+		אֶשָּׂ{A/}אֶנּוּ. {} {G/} <br/>
+		לֹא אֶ{F7}פֹּל, לֹא אֶכְ{G7}רַע – <br/>
+		אַל תִּי{Cm}רָא.
 
-בְּיָ{Cm}דַיִם טוֹ{Bb/}בוֹת <br/>
-אֶשָּׂ{A/}אֶנּוּ. {} {G/} <br/>
-לֹא אֶ{F7}פֹּל, לֹא אֶכְ{G7}רַע – <br/>
-אַל תִּי{Cm}רָא.
+  </p>
+</p>
 
-<div class="transposition"></div>
-
-</div>
 </p>
 </body>
 </html>
